# politicos

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  AUTHORS  Dockerfile  Makefile  README.md  apache.example.conf  collector.py  config.py  docker-compose.yml  manage.py  requirements.txt  requirements_dev.txt  server.py  settings.py  setup.cfg  setup.py  supervisor.example.conf  tox.ini  update_politician_pictures.py
collector/: models.py  tse.py  tse_headers.py  update_politician_pictures.py
collector/models/: __init__.py  base.py  candidacies.py  cities.py  metal.py  political_parties.py  politicians.py
politicians/: admin.py  forms.py  models.py  views.py
politicians/api/: resources.py  urls.py
politicians/migrations/: 0001_initial.py  0002_auto_20160423_1849.py  0003_auto_20160423_1850.py  0004_candidacy_political_party.py  0005_auto_20160501_1453.py  0006_auto_20160501_1851.py  0007_auto_20160518_2221.py
politicos/: __init__.py  alembic.ini  server.py  settings.py  sparql.py  urls.py  utils.py  wsgi.py
politicos/config/: __init__.py
politicos/handlers/: __init__.py  institution.py  legislator.py  legislator_events.py  legislator_events_type.py  legislature.py  mandate.py  mandate_events.py  mandate_events_type.py  political_office.py  political_party.py
politicos/migrations/: env.py
politicos/models/: __init__.py  institution.py  legislator.py  legislator_events.py  (+7 more)
politicos_api/: application.py  cache.py  urls.py
scripts/: political_party_initial_data.py
tests/: alembic.ini  fixtures.py
website/: forms.py  urls.py  views.py
(+104 files in other folders)
