[flake8]
exclude = .git, .tox, .venv, *.egg, __pycache__, build, dist
max-complexity = 10
ignore = W601, E999
max-line-length = 79
statistics = True

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = politicos_api
line_length = 79
multi_line_output = 5
not_skip = __init__.py

[metadata]
license-file = LICENSE
